# Decorator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  decorator.hpp  memoize.hpp  readme.md  sample.cpp  sample_examples.cpp  test.cpp
include/: log.hpp  memoize.hpp
src/: example_log.cpp
